--- a/layouts/partials/event_li_simple.html
+++ b/layouts/partials/event_li_simple.html
@@ -2,10 +2,14 @@
   <i class="fa fa-calendar pub-icon" aria-hidden="true"></i>
   <span itemprop="name"><a href="{{ .Permalink }}">{{ .Title }}</a></span>
   <div itemprop="startDate">
-    {{ $date := .Params.time_start | default .Date }}
-    {{ (time $date).Format $.Site.Params.date_format }}
-    {{ if $.Site.Params.events.time }}
-      {{ (time $date).Format ($.Site.Params.time_format | default "3:04 PM") }}
+    {{ if not .Params.reschedule }}
+      {{ $date := .Params.time_start | default .Date }}
+      {{ (time $date).Format $.Site.Params.date_format }}
+      {{ if $.Site.Params.events.time }}
+        {{ (time $date).Format ($.Site.Params.time_format | default "3:04 PM") }}
+      {{ end }}
+    {{ else }}
+      To be rescheduled
     {{ end }}
   </div>
   <div class="talk-metadata">
